Wireframe of cerain object did not appear #62075

Closed
opened 2019-03-01 09:08:30 +01:00 by Vyacheslav Kobozev · 3 comments

2.80 (sub 45), 168d3fd528, 2019-02-27 01:36

After entering and exit edit mode it appears.
Way to reproduce: GP-stroke->convert to curve->simplify curve->close stroke (Alt+C)->convert to mesh->fill ngon->solidify (applied).

2019-03-01_10-55-53.mp4
wireframe lost.blend

2.80 (sub 45), 168d3fd528c4, 2019-02-27 01:36 After entering and exit edit mode it appears. Way to reproduce: GP-stroke->convert to curve->simplify curve->close stroke (Alt+C)->convert to mesh->fill ngon->solidify (applied). [2019-03-01_10-55-53.mp4](https://archive.blender.org/developer/F6734751/2019-03-01_10-55-53.mp4) [wireframe lost.blend](https://archive.blender.org/developer/F6734745/wireframe_lost.blend)

Added subscriber: @Vyach

Added subscriber: @Vyach
Clément Foucault was assigned by William Reynish 2019-03-01 10:05:27 +01:00

This issue was referenced by faec3655d8

This issue was referenced by faec3655d8bfddf510ee9330fa6c9511086ba79d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62075
No description provided.