Fix T62075: Edges generated by solidify modifier does not appear

This was a missing flag.